test/parse/expr/bad-setglobal-undefined.txt
;;; ERROR: 1
(module (func 
          i32.const 1
          set_global 0))
(;; STDERR ;;;
out/test/parse/expr/bad-setglobal-undefined.txt:4:22: error: global variable out of range (max 0)
          set_global 0))
                     ^
;;; STDERR ;;)
